--- a/my-stock-back-end/package.json
+++ b/my-stock-back-end/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
     "zod": "^4.0.17"
   },
