--- a/my-stock-back-end/package.json
+++ b/my-stock-back-end/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@prisma/client": "^6.13.0",
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
